

*lh-sources-3.9.2 (12 May 2013)

  12 May 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.2.ebuild:
  Bump to linux-3.9.2 and official bfq patches

  10 May 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.9.1.ebuild,
  +lh-sources-3.9.1-r1.ebuild:
  Fix to new genpatch releases

*lh-sources-3.9.1-r1 (10 May 2013)

  10 May 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.9.1.ebuild,
  +lh-sources-3.9.1-r1.ebuild:
  Fix to new genpatch releases

*lh-sources-3.9.1 (09 May 2013)

  09 May 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.1.ebuild:
  Bump to linux-3.9.1

*lh-sources-3.9.0-r1 (07 May 2013)

  07 May 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.0-r1.ebuild:
  Bump to latest aufs release

  30 Apr 2013; Justin Lecher <jlec@gentoo.org>
  +files/lh-sources-3.9-armv6.patch:
  Add missing patch

  30 Apr 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.9.0.ebuild:
  Fix hacky naming of patches

*lh-sources-3.9.0 (30 Apr 2013)

  30 Apr 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.0.ebuild:
  Bump to new linux and aufs release

*lh-sources-3.8.10 (27 Apr 2013)

  27 Apr 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.10.ebuild:
  Bump to linux 3.8.10 and latest aufs3 release

*lh-sources-3.8.8 (18 Apr 2013)

  18 Apr 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.8.ebuild:
  Bump to latest genpatches

*lh-sources-3.8.7 (13 Apr 2013)

  13 Apr 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.7.ebuild:
  Bump to latest genpatches

*lh-sources-3.8.6 (06 Apr 2013)

  06 Apr 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.6.ebuild:
  Bump to latest genpatches release

*lh-sources-3.8.5-r1 (02 Apr 2013)

  02 Apr 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.5-r1.ebuild:
  Bump to new aufs3 release

*lh-sources-3.8.5 (30 Mar 2013)

  30 Mar 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.5.ebuild:
  Bump to genpatches 3.8-8 and latest aufs

*lh-sources-3.8.4 (21 Mar 2013)
