@@ -18,11 +18,13 @@ DIST README-3.8.8.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4ca
 DIST README-3.9.0.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
 DIST README-3.9.1.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
 DIST README-3.9.2.BFQ 9583 SHA256 88e76c5a8259b63c4534b9e154309cff2318f80506cbf469c7c8dff97474d4d5 SHA512 29e4f505eff76e2318fbecf0a7dc3f539103e2c1220e1445be1b7aa3872ea9fe3fbdb95a5cffb728ddc45bea5239a88c81d4d116b122dc795b59443c83549ca0 WHIRLPOOL 178000ac40952b903839a23d92e443be7c11ae262d674ea6f827d6eb49e28868f63bbf1eae1eb42e5eaec869504f5fc6d9c23937ac9b33e868059267b328edc5
+DIST README-3.9.3.BFQ 9583 SHA256 88e76c5a8259b63c4534b9e154309cff2318f80506cbf469c7c8dff97474d4d5 SHA512 29e4f505eff76e2318fbecf0a7dc3f539103e2c1220e1445be1b7aa3872ea9fe3fbdb95a5cffb728ddc45bea5239a88c81d4d116b122dc795b59443c83549ca0 WHIRLPOOL 178000ac40952b903839a23d92e443be7c11ae262d674ea6f827d6eb49e28868f63bbf1eae1eb42e5eaec869504f5fc6d9c23937ac9b33e868059267b328edc5
 DIST aufs-sources-3.8_p20130318.tar.xz 143300 SHA256 1573e49b0055ceb78d862ee656b25f10469c2219897a2de6689850289e723e80 SHA512 a63f43dc49ea9ae2092171590041bd052ace8755b7b8fa40c825a9478a5b9ad01158205c2eacb81bb2281a8973ff5d44adfd2874bf18b38d19f13120d8a266ad WHIRLPOOL bb540029d2541f9c0215350073ec7e307297ce9a90493e6bbeb106e7eb61e05df35334bd640eb5d34c935daa277ac84145a537e76d1aa3fb8eba2b916d5a461e
 DIST aufs-sources-3.8_p20130325.tar.xz 143352 SHA256 b278d941bcf3c2555ff15158982add3e8dd2216e575cae11bcb56b6e409c2aec SHA512 326cad5e90c5e32e603519c8a555fd08751cdcf67625ed419c1059e1cd967ae41461954b6433c05d5c0c0c83e206093b7f41fee05483bc013dd3158d418bc8cc WHIRLPOOL 471f7fc551e28cd44f9f3a1913426b0f6c7d383b7ec49faba1852fc23cc01aa94a92aacb604bb9d8a28bfc37890370cbbd013ba7a3755000fa3748b4cddb63e2
 DIST aufs-sources-3.8_p20130401.tar.xz 143368 SHA256 3ae9001450a44ae42eebfbbf542ebe977ae2c65f466eb2374bf203241829159d SHA512 46b8271a6042a13c76ee97f692a855c796545c89e2e41abb05288c605f965ee8bb2fbc2496e4e317ebedbf50623cddf9eb1596ffa53c1405db2a939bbbb072cd WHIRLPOOL ab833ea22d7fd00ca43c0332d7c528c1eba0d0fa3efbf3ba0e41fe72233627b3717a2ec1bc9d92629fb8060673afab14e894e6acd1355161d47d9736fd7b9389
 DIST aufs-sources-3.8_p20130422.tar.xz 144844 SHA256 c77daec1e71663e935eae79c20fef1b26b59e9bd46efde162f91b0c6c0078f19 SHA512 c22c7a0e1cbba529059d4f8e0821c92d6789487a9260b16938470c012ffd3d11d34ff8c5c0a133914247fe1a9af60fc8ffd35dbce55fbec8cf319aaa2f46c515 WHIRLPOOL ee32e6deb34d8f4be38781e815a083b9b5ca90fb3d09daab7640b81c00a09c9b95eb03aa176f931fc1692bcdeadb4fcd49cfb06d9ea5edc2c07be58923bb6903
 DIST aufs-sources-3.9_p20130506.tar.xz 145668 SHA256 90c73e4bb8c05697a1852dd75dfd8073db2f1c1d5e6b1f15c42f7e713d652ede SHA512 01c55dd9c571ec16f93526771ed7645895d9c7e49ad1fdd9a7e907f96cd09c0cb3a588b4cec792d64c7ead17fc1e3f7a6b5cf75c79f51b1bd28948fe69841f11 WHIRLPOOL 68557f228d98f1006b664ab564bd89b25a9c3629b06e6f73b551f95da169b037bc189af9ae016e3546dbf80cf44761b6ae9ee4e8b549070503f19960a673e102
+DIST aufs-sources-3.9_p20130519.tar.xz 145724 SHA256 04796f643635c5eb021d0193fa4b4ba624c88946962cf9977b5d7725d2063a41 SHA512 615852a86be94650d6ce70a0e390ce468748c469691d280fa257f51e94ae64d523bd0e5fa47570fc0fe460324ef7141fc0e7aac49d1b034618cc8e45a28b87b6 WHIRLPOOL e2c1c08deaf21930d3b710ce70f724e140596595547391bdefe3d30ef1f79d7dd2d7a32970c83bbc471370cf7a3f8c1650e70bf7153b857ac0c7cf6ead712635
 DIST aufs-sources-3.x_p20130429.tar.xz 144880 SHA256 39f11007cca56805834394ce192a7dfde56006883fb9460de796f602bd5be87b SHA512 cff5bd08e4427bf9bbe393518e7c76c20b2819806ae0b3f3b544a92c73b02c5d3cf1fc1925d8e90871662e4a57b1c8a8e3c29aedc82400378cde37f0c1cae113 WHIRLPOOL 9352af36f7d606ecd0de82189d5f398475c9655a1d6465d3e6afc2c014e93da71996db62899d897fe5bf1655eed21a3f86872bf85154e55d45dbda417fe1811e
 DIST deblob-3.8 113867 SHA256 883e8f003cabd9168659b4a6c2549bf22f64b8dc7ca9ff106335cfdff23b890c SHA512 acdaecb5a371489f8d0c2cea4776584eb4a76db0ea5dafc363881f2c5bbccd212d98429c2a559e697f0485329d51f1c01ba2f6c82ec703ad6bca9b8d9097a452 WHIRLPOOL 40c723ad41434aef0d30ee5e0ebcd5476778c70bf82043241522ea389a3d5a66a5cd0480722f019daf3eba97a0f30eade1741af0979be956644cfb3e24ee90bc
 DIST deblob-3.9 116031 SHA256 0fb17070d5aaf226fca39f70df68b7d482e4f803e0ef974626440a28c26b5dc3 SHA512 e014add3728dc3fa0b938f3849ccba60e82354a811eefe6761036aa5e5b7bda39960758bb918506ed3cd0758360729144304227ab2cc3f5489813204f0053d3d WHIRLPOOL 4e65c3a6ba5dd5d850567fcd347167245b527b098ffa390bf0e9fb9778ddb06cd48553f697e2fe7cb793714b520dbb5b90b9948a339663a315e299272aca09ef
@@ -48,6 +50,8 @@ DIST genpatches-3.9-4.base.tar.xz 56576 SHA256 bc2f6d38e77134ef27f21cffa8b67933e
 DIST genpatches-3.9-4.extras.tar.xz 16572 SHA256 6a93041aba5cfa6a45a348b654e129b4ba3659c87437217bbd65eb7a0a841827 SHA512 53c94f50f63d866a66869cfa0b2692c8b71ceb17a703424948d5a92c5390942667651e30fb4a662ba02147b70849cd7fb6bf71f0a4940f19ee1b392e684eb7a4 WHIRLPOOL cc2b332caffd5411c55ed9f7ddcde4c3275e6a68ec765f579e682e1e957b48a1c8601f9d607b4b4b3137af40ae0bcc091390ce733b2fdfaf95db00d77ce57370
 DIST genpatches-3.9-5.base.tar.xz 78176 SHA256 c61701effc59b03192eb2f2e5608a9e80a320441b96cbf35c52d3d4e65eeaa51 SHA512 c907bd7d36377364153da31df7bd2098eaa4159cf6ebd38711c5ce86aa3c54ad7c81f2830bb4203dc08b05c1d3254c385075ed53ea94f8be71f998b6b54bcca4 WHIRLPOOL 2562dece38a789a67a43d229e49641c569878c950cda87d40e5854d6d50a4845a787eec3ccc61ef5e7fc5df8b36146eb53a75182808a299aeb3797d5baee5499
 DIST genpatches-3.9-5.extras.tar.xz 16572 SHA256 6a93041aba5cfa6a45a348b654e129b4ba3659c87437217bbd65eb7a0a841827 SHA512 53c94f50f63d866a66869cfa0b2692c8b71ceb17a703424948d5a92c5390942667651e30fb4a662ba02147b70849cd7fb6bf71f0a4940f19ee1b392e684eb7a4 WHIRLPOOL cc2b332caffd5411c55ed9f7ddcde4c3275e6a68ec765f579e682e1e957b48a1c8601f9d607b4b4b3137af40ae0bcc091390ce733b2fdfaf95db00d77ce57370
+DIST genpatches-3.9-6.base.tar.xz 107676 SHA256 5310a6b40f42a879c0d1121822b7b161d6cd953c636177303cdbc501e30d3ed7 SHA512 5de62d943c976a58d535d121b6903d6811dd1e0a7fdbfae87b05ce887e9a45f0caa5b1feb53f78f23d7e990c4648670d2e86f33f54ecc2be1073ea26eb54ab23 WHIRLPOOL cd0f56590b36fd71a17fe4f2ee7ece2876a69c44f5946c21fb26a859dfd08a6158ad69939ba532b29b03dc0b4aa8d6cc74ad197fd97fd4369170fc9b4810e5b4
+DIST genpatches-3.9-6.extras.tar.xz 16572 SHA256 6a93041aba5cfa6a45a348b654e129b4ba3659c87437217bbd65eb7a0a841827 SHA512 53c94f50f63d866a66869cfa0b2692c8b71ceb17a703424948d5a92c5390942667651e30fb4a662ba02147b70849cd7fb6bf71f0a4940f19ee1b392e684eb7a4 WHIRLPOOL cc2b332caffd5411c55ed9f7ddcde4c3275e6a68ec765f579e682e1e957b48a1c8601f9d607b4b4b3137af40ae0bcc091390ce733b2fdfaf95db00d77ce57370
 DIST lh-logo_linux_clut224.ppm 213668 SHA256 cf2ffc266799f3948131c30fe72870ff03afe9010643cc5a1c7b36cd1fe80562 SHA512 95b2a9b21f9125e178e32447f2310983427b37ffd4a861ce145d57e7daa828a38e51641069cdd191f4f2b303a887ae5b93ab0a40290a7976302683d633cdb315 WHIRLPOOL d0e693f86e964661090774350bdc4621f184bce20c7ad1e2fa62a941894feca5b709029a8f1ae398ca3f190f1eacd8c0e072f82e589cbae3dc2da565acca2297
 DIST linux-3.8.tar.xz 70989468 SHA256 e070d1bdfbded5676a4f374721c63565f1c969466c5a3e214004a136b583184b SHA512 10a7983391af907d8aec72bdb096d1cabd4911985715e9ea13d35ff09095c035db15d4ab08b92eda7c10026cc27348cb9728c212335f7fcdcda7c610856ec30f WHIRLPOOL 0c633854ad9c06df1b1d832aea9bbef76144ba88c8fccf6a3f8729101dc36838bcda6ccd444451cab19177608e7f7866f4f79cff1a8ef2bd0c893933d7f1f44c
 DIST linux-3.9.tar.xz 72104164 SHA256 60bc3e64ee5dc778de2cd7cd7640abf518a4c9d4f31b8ed624e16fad53f54541 SHA512 77fa521f42380409f8ab400c26f7b00e225cb075ef40834bb263325cfdcc3e65aef8511ec2fc2b50bbf4f50e226fb5ab07d7a479aaf09162adbbf318325d0790 WHIRLPOOL 668a8de30c7c3ccf6558cf0f29570f15e37ca7d599d1453afc3cab113d1b05fbd5b32646dd9ed798ceb61405a8754345da0740a53f467b825445028cda4bc698
@@ -63,12 +67,13 @@ EBUILD lh-sources-3.9.0.ebuild 3372 SHA256 a391fcf33b1319efb0c2956f972aa4b306044
 EBUILD lh-sources-3.9.1-r1.ebuild 3372 SHA256 ed1a9fe97bb086451c109449b9181d38df5137b691510742d6f1de2154839b81 SHA512 15f09912d17ceea14ed654d3e390402112505e3ed2f918f29ba067132c2859b90c3d96f8c1fc890ba5ed493802343c007e6a5c250ced01e2bb3e66f1b3abc533 WHIRLPOOL db3f87f84d19dde09e6aed7699e7fe7d6db50675897cb65800398cc219ec1f245d8e557532deb9b08b9746939f2bdf186175980624978125f9deb5d2c2f2f22b
 EBUILD lh-sources-3.9.1.ebuild 3372 SHA256 9c89077c9a56d04764b730c34abce6b1ce0b42d26882fa259cace1de92d67b34 SHA512 127181e45c377bfdc5873b72f38e55915abd54fdf557e14f3031669441dd2934ceddee3936af6a287e3bebdf022299fb4eaa2c9113cd9b4eab8c61c860b8f94d WHIRLPOOL 9152cdc2e85bd84dbefb4dca1817d8c94584b363f17f83ab61741c4dc2f6bf30904a319b449be2e990beaa178b91eb1c3bc133d065c51a91150b68ae1a403f01
 EBUILD lh-sources-3.9.2.ebuild 3437 SHA256 8a31ccee5e0d1d417a6ac92c7eabe6810d482d4e55ddb278970d19d36226f6fb SHA512 22dfce8597f9e1b9e18d81e8e53603e4f214b0f482028b21b42bc755b21fd4e1e30827f8af2543b69c4bab908bb8326fdb9249b21700cc824ba1644ebf04f36d WHIRLPOOL 52fbc597301f29518751bb0adb98427ac7c60265515d3123fe903d70b7c1d9d4fbd1b9b7007cc5e0cd4a023079bb8cc7c25ee37835665fd8f2bd283cc16fc811
-MISC ChangeLog 8175 SHA256 cea54afe8ba06b46cdb3f553a1ed3eb3d206710ef8f63582055940d141991cec SHA512 a12e65d9ec398c589e79d17a6f89e28eb6d31a38ecafceaf8dddf94d3ecc12e761cda4fa817d8886c7090a9bbcb0f7fe33b6dc60eae846fbbcc571fff3f501ad WHIRLPOOL 267159bf0c05c6c77c2297cde788bd17301653fd3788da3f3282db1937165ec50abe7132f3d69cddfaaa07d5896449e46ee67228688d17cb1e451e5efadd78ed
+EBUILD lh-sources-3.9.3.ebuild 3437 SHA256 4f81cbb67f418b94def203d9bc7c31ad55717d4eb23615e8139ba4c31f60dd9d SHA512 f070df80dcc9871fc716d7aa73a22e658db8da7e96d807908f7cdbdc680ca0d9be7753e1aa1e17ba1b161adc7a228d7224238008ade1d7418a2eaecbe004ab0b WHIRLPOOL ea39a0408d88c87a613130ce7f4f9bd2bc9a2cfe52149910c8c0eecdff445a4b17e5207f820428a10dc0014a993f764f1cb870622e600ae5bc789d81da683a3c
+MISC ChangeLog 8328 SHA256 31394d3ea4f16d05e9fc0ccba097a8ce3c91ea3598f4658f2c40fe15420ddf24 SHA512 b58f122c4b5570df8fd67e5eac469034864950c7de5c967eea3c2b41505e7088acf262de72382eb7aa6d3a7db763c63b8477a7df06aee6be4e11229e826a5ef6 WHIRLPOOL 5eccfb627fd458e5562656e263cd1b01790a30875cf1cfedd6325fb11d96e02d36d8833de743fa974195584d4ba87b3c603f46fe60ea7469d530d697b12cbae9
 MISC metadata.xml 621 SHA256 0e6f9ec38a6a9e192a6ab3cf83a409914c821b4dde2c1a15c28d558b6beef8bb SHA512 56744236081b425f4726c26c3b1a8e23297f1b7e4656ff4edbc2e6608a1150fb2e84ed1b58c5ab1318aebdab072392ef9d00160e2c766cc540bb6746bbe24bb3 WHIRLPOOL ed73cba1dee5abce3979c8f41094660b6eb046ef8c4d5820c060b863f54e6fb56a344c49630d8d03d400cba2dc2f4e5a35cd48c4ebdc4e9558511f2e9c9333bb
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREKAAYFAlGPWvoACgkQgAnW8HDreRYMOgCgrpd+gIjzMZtxtm8l4f8hA429
-A3sAoM7apGHNibdeLAeA5qpiknKbSUgQ
-=NqE1
+iEYEAREKAAYFAlGaaGkACgkQgAnW8HDreRZlRwCeJvOQ88v61QOYLL0bQZlTZJT1
+aOQAoLpZl4uHHG88Duup5fjiryM94oXQ
+=76V0
 -----END PGP SIGNATURE-----
