@@ -1,5 +1,10 @@
 
 
+*lh-sources-3.9.3 (20 May 2013)
+
+  20 May 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.3.ebuild:
+  Bump to latest genpatches and aufs3 release
+
 *lh-sources-3.9.2 (12 May 2013)
 
   12 May 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.2.ebuild:
